# boat-ride-test

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  render.yaml  requirements.txt
sql/: 01_extensions.sql  02_profiles.sql  03_boat_profiles.sql  04_saved_routes.sql  05_crowdsource.sql  06_scoring_preferences.sql  07_seed_preset_boats.sql  08_rpc_functions.sql  09_add_make_model.sql  10_seed_real_boat_models.sql  11_add_kenner_2103.sql  12_add_pursuit_dc295.sql
src/boat_ride/: api.py  auth.py  cli.py  config.py  db.py  worker.py
src/boat_ride.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/boat_ride/cache/: keys.py  redis_client.py
src/boat_ride/contracts/: route_contract.py
src/boat_ride/core/: engine.py  models.py  route.py  scoring.py
src/boat_ride/geo/: fetch_calculator.py  shoreline.py
src/boat_ride/providers/: base.py  chain.py  combined.py  coops.py  fetch.py  http.py  mock.py  ndbc.py  nwps.py  nws.py  usace.py  waves_inland.py
src/boat_ride/routers/: boats.py  profiles.py  reports.py  routes.py  scoring_feedback.py
src/boat_ride/tools/: make_map.py
trips/: last_run_debug.json  last_run_map.html  sample_trip.json  sample_trip_halfmoon_to_stcatherines.json
